# MacedonianLetterFrequencies

./: CMakeLists.txt  README.md  frequencies.csv
data/: library.csv
include/: counter.hpp  http_client.hpp  scraper.cpp  scraper.hpp
src/: http_client.cpp  scraper.cpp
